Got zoom/pan to work in a container, semi-properly (not responsive at all, #zoomphoto's CSS container size is fixed pixels)

--- a/src/styles/overview.scss
+++ b/src/styles/overview.scss
@@ -73,10 +73,13 @@ $overlayPercent: 80%;
 
 #zoomphoto {
   transform: scale(2.5);
+  transform-origin: top left;
   background-repeat: no-repeat;
   position: fixed;
-  height: 100%;
-  width: 100%;
+  // height: 100%;
+  // width: 100%;
+  width: 500px;
+  height: 350px;
 }
 
 #sale-price {
